fix: legend legend values overlaps

--- a/k2-packages/ui-kit/src/Legend/style.module.css
+++ b/k2-packages/ui-kit/src/Legend/style.module.css
@@ -6,8 +6,6 @@
 .cell {
   padding: var(--unit);
   font-size: .7em;
-  width: 45px;
-  height: 45px;
 }
 
 .colorCell {
@@ -24,6 +22,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  width: auto;
 }
 
 .yStepsCell:before {
@@ -39,6 +38,7 @@
 .xStepsCell {
   display: flex;
   position: relative;
+  width: auto;
 }
 
 .xStepsCell:before {
